  * some routines did only return the result, but not modify $x in place
2004-01-10 v1.13 Tels 4759 tests
  * tests from BigInt v1.68
  * removed DESTROY from GMP.pm and made GMP.xs destroy => DESTROY
  * removed _num from GMP.pm and made GMP.xs __stringify => _num
  * removed _modinv() from GMP.pm and fixed up _modinv in GMP.xs
  * disabled the borken _log_int() from the XS code
  * modify $x in place for _dec, _inc, _add, _mod, _mul, _fac, _and, _or,
    _xor, _sqrt, _root and _sub (sub in non-reversed form), this removes some
    malloc/free and makes these ops slightly faster
    (between 10 and 33% in Math::BigInt (!), depending on input and size)
2004-02-15 v1.14 Tels 4867 tests
  * require BigInt v1.70, use tests from it and make API compatible with it
  * _rsft() and _lsft() modify their argument instead of making a copy,
    meaning brsft() and blsft() got about 20% faster in BigInt
  * added a working _zeros() method
  * added a working _log_int() method
2004-11-22 v1.15 Tels 5112 tests
  * some small cleanups in the Perl code
  * changed "class" to "Class" to avoid the reserved keyword for MS compiler
  * do not pull unused parameter "Class" from stack - avoid compiler warnings
  * put _sub() into XS for more speed and smaller memory footprint
  * testsuite from MBI v1.73
2004-12-09 v1.16 Tels 5112 tests
  * fixed a leak in _div() (Thanx Tassilo v. Parsival!)
  * put _div() into XS, making division slightly faster for small numbers
  * put leak.pl and leaktest into MANIFEST for later checking
2005-01-01 v1.17 Tels 5182 tests
  * use XSLoader instead of DynaLoader to save a tiny amount of memory
  * take over tests from Math::BigInt v1.74
  * require Math::BigInt v1.74
  * simplify sub code in XS (left-over artifact from v1.16)
  * fix a leak in _zeros()
  * _zeros() is now much faster for odd numbers (O(1) vs. O(N*N))

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>