@@ -14,35 +14,35 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 70d6187d0152848c922dc4360fa6dd3a3dc35c62 BUGS
-SHA1 10ba246d1dbff89a3905428d6f76f42aef36579a CHANGES
+SHA1 6b6bdc6293af028e86dbd63b6a580efcec4077f8 CHANGES
 SHA1 dda5ca4f413031e9efcaa1600461d5e2adaa3a40 CREDITS
 SHA1 c6b4374d7e911bd399534af9fa5ceb8c90dc6485 GMP.xs
 SHA1 1c219a49ee07891ca39de3f89ce4bbe02549af82 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 6cd50151e6eab24927bce91ec062e6d71724ce63 MANIFEST
-SHA1 8b0a5a75c4530c61658e4af1cd76420270023e19 META.yml
-SHA1 83262bb7cc34f4016ed89005e3b0d93438963f31 Makefile.PL
-SHA1 2be04f1ccd8a14a7e00e99ce661a47e579f9f02f NEW
+SHA1 e6a410330f7e509a2a3e9939f4c092897a46f6d9 META.yml
+SHA1 3088c0112d5b30c3ab118a4bbe589015bc250c20 Makefile.PL
+SHA1 565caace9d59982d512f96b4a83c67837274688b NEW
 SHA1 e9de29b6e5e9a5e446231b5b12b644f6ed2caafc README
 SHA1 200ade10e14449652ac59d0c8a9569cf29645cbd TODO
 SHA1 fd48d0d8750eb949e485d8136b5b424fe73e9775 build/README
 SHA1 7bcc4113830721ad6e37a1ea79df94a6987c836d build/leak.pl
 SHA1 ac25bda8a6eb9058a9e42a8943c3e11b9fed88dc build/leaktest
-SHA1 103f5b902922eba6550271837d8d64d6c40d73d7 lib/Math/BigInt/GMP.pm
-SHA1 57a416650fede5f54aa295e5cd133022a0b9efdd t/bigfltpm.inc
-SHA1 ba0b4085ef17b06a733d7ee26cb5b54ecf4c6094 t/bigfltpm.t
-SHA1 d552991e5df86d3f04b6928c97efe2653fc776d2 t/bigintg.t
-SHA1 aaaea1e9f34d1dfe090911863e5289f85f83ed46 t/bigintpm.inc
-SHA1 6dfbf7bc6601b23073204e9c104d3b68213c93ab t/bigintpm.t
+SHA1 d378c31028467583b1793be2b88a10beb3c6a702 lib/Math/BigInt/GMP.pm
+SHA1 1b842c489d03069f9bf329e659017fb2e76ee7c7 t/bigfltpm.inc
+SHA1 a94042649e8e752105e02718530eec6bdf19dda0 t/bigfltpm.t
+SHA1 9a2ec6e1e1a47a23092b4eb97301d6ea83dd35d8 t/bigintg.t
+SHA1 f88c1aa03a27bd230a72574a53a55101686bf62b t/bigintpm.inc
+SHA1 a53e9a5acc83925ac0e2d9243aba52e7beaf88bd t/bigintpm.t
 SHA1 f7aad87c0a30330d474f4fb45f6d1953d6701d2f typemap
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQdbBZXcLPEOTuEwVAQGaAwf8DE9+TD70VMuSB8qPkutFHacs2Z1ztUGf
-pqNMNtKi/Y6W7gY0zyQbp7nqwX8oR2Dcx5ULi1UuIM3MzIaDlB/se0ThEqsd+No4
-a9pjBxqnQ3zDisFCqtsEWsEmvBYu7JUH2y4ZSe46p2qfm/UYGFBXzjm9PXXpVQyn
-JU/0GxsQrhfZBnEIKT4KbPzDKp1oPLw0gf41+Zmh6clix4hp5i0zUNycwSX9nUWV
-KNVpO41KgMDjZURTRazFbZgz+DgIymvdgp8yCTNv5DGLTfhNpS0c0hj6EyVmXnTQ
-iiX+YLRUkwr2yLfKwLN4p2kk4KO7rL9oA9M9AHS/y8/cqvidUiXuCQ==
-=bjyF
+iQEVAwUBQlj95ncLPEOTuEwVAQGoMwf+JQUQFPfryG1oJAFDp9OP4QTc/c79mFhZ
+IgliIlae6VdrpZcuXnuz76N3V8Z+7IYvPuqJxfIhXxpYAl3r1rbOfxhsoKx4LHCV
+yLbgUfP4jvTXeFLcNU2ptVgMge4c1nyuSYb/eHLmnXT0MgRznHWRSAw6z2o5blk7
+edfJzHaKh8GhIOzReBMPhmQjpTeQ8xbDfNEAId+iPU5TeA7oba0zJYJEYGwVmF1e
+Pg56+5EiJZ5JIjLS1IGj5oa7E6l86HHioUgGRJZaYUSDN/6HmgKgRAy16fvxEDho
+BFdDKsmY8w9qiQQ7uKnxXBDNyiHBpOXn3vjCVF848SSGUEuHNhW+vA==
+=R9q1
 -----END PGP SIGNATURE-----
