@@ -9,7 +9,7 @@ BEGIN
   unshift @INC, '../lib'; 	# for running manually
   unshift @INC, '../blib/arch';
   chdir 't' if -d 't';
-  plan tests => 1992;
+  plan tests => 2012;
   }
 
 use Math::BigInt lib => 'GMP';
